--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/stylectt.css">
-    <title>Projeto Rede Sociais</title>
+    <title>Rede Sociais</title>
 </head>
 <body>
     <main>
