--- a/facebook.html
+++ b/facebook.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <img src="img/tela-facebook.jpg" alt="">
-    <a href="https://www.facebook.com/tafaelmachado" target="_blank">Acesse</a>
+    <a href="https://www.facebook.com/smokingreggaecampos" target="_blank">Acesse</a>
 </body>
 </html>
