--- a/noticias.html
+++ b/noticias.html
@@ -21,8 +21,16 @@
             <a href="contato.html">Contato</a>
         </nav>
         <main>
-            <h1>Noticias</h1>
-            <p>Ainda não há noticias disponiveis.</p>
+            <h2>‘Fumo há décadas, todos os dias’</h2>
+        <p>Diz candidato sobre <strong>maconha</strong>, <strong>Psolista</strong> marcou presença no comício de <strong>Lula</strong> na quadra da Portela, zona norte do Rio.</p>
+        <section>Materia de: <a href="https://veja.abril.com.br/" target="_blank">Veja Digital</a></section>
+            <picture>
+                <img src="img/andre-barros.jpg" alt="">
+                <strong><a href="https://andre-barros.financie.de/">André Barros</a></strong>, candidato a deputado federal e defensor da <strong>legalização da maconha</strong>.
+            </picture>
+<br>
+<br>
+            <p>Famoso nas redes após campanha explícita sobre o consumo de maconha, <strong>André Barros (Psol)</strong> assume, sem pestanejar, que não é apenas a favor da legalização da erva. “Eu mesmo fumo todos os dias há década. Não lembro nem como comecei”, disse a <a href="https://veja.abril.com.br/" target="_blank">VEJA</a> em tom bem humorado. O candidato a deputado federal pelo Rio de Janeiro aproveitou o comício de <a href="https://www.ebiografia.com/luiz_inacio_lula_silva/" target="_blank">Lula (PT)</a> com o prefeito <a href="https://www.eduardopaes.com.br/" target="_blank">Eduardo Paes (PSD)</a> neste domingo, 25.</p>
         </main>
         <footer>
             <p>Site criado por Tafael Machado</p>
