--- a/instagram.html
+++ b/instagram.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <img src="img/tela-instagram.jpg" alt="">
-    <a href="https://www.instagram.com/ervamedicinalcampos/">Acesse</a>
+    <a href="https://www.instagram.com/ervamedicinalcampos/" target="_blank">Acesse</a>
 </body>
 </html>
