--- a/noticias.html
+++ b/noticias.html
@@ -26,7 +26,7 @@
         <section>Materia de: <a href="https://veja.abril.com.br/" target="_blank">Veja Digital</a></section>
             <picture>
                 <img src="img/andre-barros.jpg" alt="">
-                <strong><a href="https://andre-barros.financie.de/">André Barros</a></strong>, candidato a deputado federal e defensor da <strong>legalização da maconha</strong>.
+                <strong><a href="https://andre-barros.financie.de/" target="_blank">André Barros</a></strong>, candidato a deputado federal e defensor da <strong>legalização da maconha</strong>.
             </picture>
 <br>
 <br>
