--- a/noticias.html
+++ b/noticias.html
@@ -22,11 +22,25 @@
         </nav>
         <main>
             <article>
-                <h2>A Fazenda: Tiago quer fumar "beck de 7 metros" após sair do reality</h2>
+                <h2>Desejo proibido</h2>
+                <section>Materia de: <a href="https://noticiasdatv.uol.com.br/" target="_blank">Noticias de TV</a></section>
                 <picture>
-                    <img src="img/" alt="">
+                    <img src="img/tiago-revela-vontade-a-fazenda_6572.jpeg" alt="">
+                    <section><strong>Tiago revela vontade de fumar maconha em A Fazenda 2022</strong>, modelo disse que vai fumar maconha quando deixar o confinamento.</section>
                 </picture>
             </article>
+            <br>
+            <p>
+                <strong>Tiago Ramos</strong> revelou na manhã desta segunda-feira (26) que a primeira coisa que vai fazer quando sair de <strong>A Fazenda 14</strong> será fumar maconha. O modelo afirmou, em uma conversa com <strong>Bia Miranda</strong> sobre a roça, que essa era sua maior vontade.</p>
+
+                <p>Os dois estavam falando que, caso caíssem na roça contra <strong>Vinicius Buttel</strong>, eles voltariam. "Ele [Vini] não volta, não. Ele falou umas coisas muito...", declarou Bia, sem terminar a frase. A dupla acredita que o ex-MTV será o participante mais votado pela casa.</p>
+
+                <p>"Quando eu sair, eu vou dar muito valor para a minha vida lá fora", desabafou a neta de Gretchen. <strong>"Nossa... Eu vou fumar um beck de sete metros"</strong>, prometeu o ex-padrasto de <strong>Neymar</strong>, rindo ao se referir à droga. A câmera de transmissão do <strong>Playplus</strong> cortou rapidamente para a área externa, onde <strong>Lucas Santos</strong> estava realizando o trato dos animais.</p>
+
+                <p>Essa não é a primeira vez que os peões da edição falam sobre uso de drogas dentro do confinamento. Ao longo do último domingo (25), <strong>Deolane Bezerra </strong>se defendeu das fofocas sobre ter usado <strong>lança-perfume</strong> na <strong>Farofa da Gkay</strong> ano passado e ameaçou processar <strong>Kerline Cardoso</strong>, que foi quem começou o assunto pela casa.</p> 
+                    
+                <p>Na hora da discussão, a ex-BBB negou que tivesse falado o nome da advogada, mas mais tarde acabou confessando para <strong>Ingrid Ohara</strong> que realmente deu a entender que <strong>Deolane</strong> estava usando a droga no evento.
+                </p>
         </main>
         <main>
             <article>
